--- a/package.json
+++ b/package.json
@@ -9,10 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/montserrat": "^0.4.1",
+    "@expo-google-fonts/poppins": "^0.4.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-navigation/bottom-tabs": "^7.4.2",
+    "@react-navigation/native": "^7.1.13",
+    "@react-navigation/native-stack": "^7.3.18",
+    "@react-navigation/stack": "^7.3.6",
+    "axios": "^1.10.0",
+    "camelize": "^1.0.1",
     "expo": "~53.0.12",
+    "expo-font": "~13.3.1",
     "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-native": "0.79.4"
+    "react": "^19.1.0",
+    "react-native": "^0.80.0",
+    "react-native-maps": "1.20.1",
+    "react-native-paper": "^5.14.5",
+    "react-native-safe-area-context": "^5.4.1",
+    "react-native-svg": "15.11.2",
+    "react-native-webview": "^13.13.5",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
