--- a/package.json
+++ b/package.json
@@ -21,14 +21,18 @@
     "expo": "~53.0.12",
     "expo-font": "~13.3.1",
     "expo-status-bar": "~2.2.3",
+    "firebase": "^11.10.0",
     "react": "^19.1.0",
+    "react-hook-form": "^7.60.0",
     "react-native": "^0.80.0",
+    "react-native-dotenv": "^3.4.11",
     "react-native-maps": "1.20.1",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-svg": "15.11.2",
     "react-native-webview": "^13.13.5",
-    "styled-components": "^6.1.19"
+    "styled-components": "^6.1.19",
+    "lottie-react-native": "7.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
