--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-svg": "15.11.2",
     "react-native-webview": "^13.13.5",
     "styled-components": "^6.1.19",
-    "lottie-react-native": "7.2.2"
+    "lottie-react-native": "7.2.2",
+    "expo-dev-client": "~5.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
